applications/hello-world/route.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    gateway.scg.sh/public: "true"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world
spec:
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: hello-world-https
  hostnames:
    - hello.world.scg.sh
  rules:
    - backendRefs:
        - name: hello-world
          port: 80
